force-app/main/default/objects/Case/fields/VCC_Day_Closed_Sort__c.field-meta.xml
<CustomField>
    <fullName>VCC_Day_Closed_Sort__c</fullName>
    <description>Sort Closed Date by the day of the week</description>
    <formula>CASE( (MOD(DATEVALUE(ClosedDate) - (DATE(1900, 1, 6)), 7)), 0, &quot;7.Saturday&quot;, 1, &quot;1.Sunday&quot;, 2,&quot;2.Monday&quot;, 3, &quot;3.Tuesday&quot;, 4,
        &quot;4.Wednesday&quot;, 5, &quot;5.Thursday&quot;, 6,&quot;6.Friday&quot;,&quot;&quot;)</formula>
    <label>Day Closed Sort</label>
    <type>Text</type>
</CustomField>