force-app/main/default/objects/Case/fields/VCC_Electronic_Signature_Count__c.field-meta.xml
<CustomField>
    <fullName>VCC_Electronic_Signature_Count__c</fullName>
    <description>This is a roll-up summary of signatures on the Case object.</description>
    <label>VCC Electronic Signature Count</label>
    <summaryFilterItems>
        <field>VCC_Progress_Note__c.VCC_Electronic_Signature__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>VCC_Progress_Note__c.VCC_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>