force-app/main/default/objects/Case/fields/VCC_Follow_Up_Appt_Needed__c.field-meta.xml
<CustomField>
    <fullName>VCC_Follow_Up_Appt_Needed__c</fullName>
    <description>Utilized Medical Provider when a follow up appointment is needed after a virtual visit appointment</description>
    <inlineHelpText>Select when an appointment is needed for the Veteran. A related case will automatically be created and placed in the MSA Queue for scheduling the
        appointment.</inlineHelpText>
    <label>Follow-Up Appt Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Within 24 Hrs</fullName>
            </value>
            <value>
                <fullName>Within 24-72 Hrs</fullName>
            </value>
            <value>
                <fullName>Within 8 hours</fullName>
            </value>
            <value>
                <fullName>Within 24 hours</fullName>
            </value>
            <value>
                <fullName>Within 3 days</fullName>
            </value>
            <value>
                <fullName>Within 2 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>