force-app/main/default/objects/Case/fields/VCC_Hours_to_Close__c.field-meta.xml
<CustomField>
    <fullName>VCC_Hours_to_Close__c</fullName>
    <formula>( ClosedDate - CreatedDate ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>