force-app/main/default/objects/Case/fields/VCC_isMyVISN__c.field-meta.xml
<CustomField>
    <fullName>VCC_isMyVISN__c</fullName>
    <description>Used for reporting by VISN. If the Case&apos;s Owner Division matches the current end user&apos;s VISN (division), then this field will automatically be
        checked.</description>
    <formula>IF( VCC_Owner_Division__c = $User.Division ,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isMyVISN</label>
    <type>Checkbox</type>
</CustomField>