force-app/main/default/objects/Case/fields/VCC_Medication_Name__c.field-meta.xml
<CustomField>
    <fullName>VCC_Medication_Name__c</fullName>
    <description>Field to Track Incorrect Medication Received</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Medication Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>