force-app/main/default/objects/Case/fields/VCC_Meds_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>VCC_Meds_Inquiry__c</fullName>
    <description>Field to Track Incorrect Medication Received</description>
    <label>Meds Inquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Medication</fullName>
            </value>
            <value>
                <fullName>Delayed Medication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>