force-app/main/default/objects/Case/fields/VCC_No_of_Renewals__c.field-meta.xml
<CustomField>
    <fullName>VCC_No_of_Renewals__c</fullName>
    <description># of Renewals on this Pharmacy Case</description>
    <inlineHelpText># of Renewals on this Pharmacy Case</inlineHelpText>
    <label># of Renewals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>&gt;10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>