force-app/main/default/objects/Case/fields/VCC_Opened_in_Error__c.field-meta.xml
<CustomField>
    <fullName>VCC_Opened_in_Error__c</fullName>
    <description>When Case Close Status is set to Opened in Error, this field is used to give more detail on the error.</description>
    <inlineHelpText
    >Use this field to provide more context when the Case Status is set to Opened in Error. This field can only be edited by using the Close Case button.</inlineHelpText>
    <label>Error Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong facility</fullName>
            </value>
            <value>
                <fullName>Wrong patient</fullName>
            </value>
            <value>
                <fullName>Testing/training</fullName>
            </value>
            <value>
                <fullName>Clicked button by accident</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>