force-app/main/default/objects/Case/fields/VCC_Other_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>VCC_Other_Case_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Case Reason</label>
    <type>TextArea</type>
</CustomField>