force-app/main/default/objects/Case/fields/VCC_Other_Information__c.field-meta.xml
<CustomField>
    <fullName>VCC_Other_Information__c</fullName>
    <description>Use field to provide more context when the Error Details is set to Other. This field can only be edited by using the Close Case button.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use field to provide more context when the Error Details is set to Other. This field can only be edited by using the Close Case button.</inlineHelpText>
    <label>Other Error Description</label>
    <type>TextArea</type>
</CustomField>