force-app/main/default/objects/Case/fields/VCC_Patient_Telecare_Enabled__c.field-meta.xml
<CustomField>
    <fullName>VCC_Patient_Telecare_Enabled__c</fullName>
    <description>Required to select a value before saving a virtual visit scheduling case.</description>
    <inlineHelpText>Is the Veteran enabled for Virtual Care Visits?  If so, should this appt use VVC Now?</inlineHelpText>
    <label>Telecare Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>