force-app/main/default/objects/Case/fields/VCC_Pharmacy_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>VCC_Pharmacy_Case_Type__c</fullName>
    <description>A hidden field as part of the system to control button visibility for pharmacy users.</description>
    <label>Pharmacy Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier I</fullName>
            </value>
            <value>
                <fullName>Tier II</fullName>
            </value>
            <value>
                <fullName>Tier III</fullName>
            </value>
            <value>
                <fullName>Supervisor I</fullName>
            </value>
            <value>
                <fullName>Supervisor II</fullName>
            </value>
            <value>
                <fullName>Supervisor III</fullName>
            </value>
            <value>
                <fullName>Queue I</fullName>
            </value>
            <value>
                <fullName>Queue II</fullName>
            </value>
            <value>
                <fullName>Queue III</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>