force-app/main/default/objects/Case/fields/VCC_Progress_Notes_Count__c.field-meta.xml
<CustomField>
    <fullName>VCC_Progress_Notes_Count__c</fullName>
    <description>This field is a roll-up count of progress notes on the Case object.</description>
    <label>Progress Notes Count</label>
    <summaryForeignKey>VCC_Progress_Note__c.VCC_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>