force-app/main/default/objects/Case/fields/VCC_Recommended_Preferred_Appt_Modality__c.field-meta.xml
<CustomField>
    <fullName>VCC_Recommended_Preferred_Appt_Modality__c</fullName>
    <description>Type of Appointment Requested by Patient.</description>
    <label>Recommended / Preferred Appt Modality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>