force-app/main/default/objects/Case/fields/VCC_Specialty_Community_Care_Requested__c.field-meta.xml
<CustomField>
    <fullName>VCC_Specialty_Community_Care_Requested__c</fullName>
    <description>Specify Specialty/Community Care Requested Services</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Specify Specialty/Community Care Requested Services</inlineHelpText>
    <label>Specialty / Community Care Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>