force-app/main/default/objects/Case/fields/VCC_User_can_change_owner__c.field-meta.xml
<CustomField>
    <fullName>VCC_User_can_change_owner__c</fullName>
    <formula>if(($Permission.VAHC_Pharmacy_Tier_III_Supervisor || $Permission.VAHC_Pharmacy_Tier_II_Supervisor || $Permission.VAHC_Pharmacy_Tier_I_Supervisor) &amp;&amp;
        ISPICKVAL(VCC_Case_Type__c, &quot;Pharmacy&quot;), true, if(( VCC_User_is_Owner__c = true &amp;&amp; $Permission.VCC_Pharmacy_Tier_II), true, if(( VCC_User_is_Owner__c =
        true &amp;&amp; $Permission.VCC_Pharmacy_Tier_III), true, false)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User can change owner</label>
    <type>Checkbox</type>
</CustomField>