force-app/main/default/objects/Case/recordTypes/Tele_Urgent_Care_0_2_Hours.recordType-meta.xml
<RecordType>
    <fullName>Tele_Urgent_Care_0_2_Hours</fullName>
    <active>true</active>
    <businessProcess>High Acuity %280-2 hours RFI%29</businessProcess>
    <description>Tele Urgent Care Case for 911 Refusal / ED Now</description>
    <label>High Acuity (0-2 hours RFI)</label>
</RecordType>