force-app/main/default/objects/Case/recordTypes/VCC_Pharmacy.recordType-meta.xml
<RecordType>
    <fullName>VCC_Pharmacy</fullName>
    <active>true</active>
    <businessProcess>VCC Support Process</businessProcess>
    <description>--VA Health Connect medication and prescription cases</description>
    <label>Pharmacy Case</label>
</RecordType>