force-app/main/default/objects/Case/recordTypes/VCC_Vitrual_Clinic_Visit.recordType-meta.xml
<RecordType>
    <fullName>VCC_Vitrual_Clinic_Visit</fullName>
    <active>true</active>
    <businessProcess>VCC Support Process</businessProcess>
    <description>--VA Health Connect virtual visits with medical providers</description>
    <label>Virtual Clinic Visit Case</label>
</RecordType>