force-app/main/default/objects/Case/recordTypes/VCL_Cases.recordType-meta.xml
<RecordType>
    <fullName>VCL_Cases</fullName>
    <active>true</active>
    <businessProcess>VCL Support Process</businessProcess>
    <description>Cases for VCL Encounter Location Requests</description>
    <label>VCL Cases</label>
</RecordType>