force-app/main/default/objects/Case/validationRules/TED_Prevent_MP_and_RN_Change_Ownership.validationRule-meta.xml
<ValidationRule>
    <fullName>TED_Prevent_MP_and_RN_Change_Ownership</fullName>
    <active>true</active>
    <description>A Tele-EC Medical Provider, Registered Nurse, or TCT User will not be able to change the Case Owner field on the Case Record Page to transfer a Case to another User.</description>
    <errorConditionFormula>AND (
	RecordType.DeveloperName = &quot;Tele_Urgent_Care_0_2_Hours&quot; || RecordType.DeveloperName = &quot;Tele_Urgent_Care_2_8_Hours_Case&quot;,
	$Permission.TED_RN || $Permission.TED_Medical_Provider ||  $Permission.Tele_EC_TCT_User ,
	NOT($Permission.DisableTriggersFlag),
	ISCHANGED(OwnerId),
	$User.Id &lt;&gt; OwnerId,
	NOT(BEGINS(OwnerId, &quot;00G&quot;))
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>You do not have permission to transfer this case.</errorMessage>
</ValidationRule>