force-app/main/default/objects/Case/validationRules/TED_Prevent_TCT_Changing_OwnerToThemself.validationRule-meta.xml
<ValidationRule>
    <fullName>TED_Prevent_TCT_Changing_OwnerToThemself</fullName>
    <active>true</active>
    <description>Prevents TCT from Assigning Ownership to themselves</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Tele_Urgent_Care_0_2_Hours&quot; || RecordType.DeveloperName = &quot;Tele_Urgent_Care_2_8_Hours_Case&quot;,
$Permission.Tele_EC_TCT_User,
!$Permission.DisableTriggersFlag,
ISCHANGED(OwnerId),
OwnerId =  $User.Id
)</errorConditionFormula>
    <errorMessage>A TCT User can&apos;t update case ownership to themselves</errorMessage>
</ValidationRule>