force-app/main/default/objects/Case/validationRules/TED_TCT_StatusChng_ReadyForMP_PatCB.validationRule-meta.xml
<ValidationRule>
    <fullName>TED_TCT_StatusChng_ReadyForMP_PatCB</fullName>
    <active>false</active>
    <description>This validation rule stops the TCT Persona users from updating the Case Status to any Status besides Patient Call Back or Ready For MP</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Tele_Urgent_Care_0_2_Hours&quot; || RecordType.DeveloperName = &quot;Tele_Urgent_Care_2_8_Hours_Case&quot;,
$Permission.Tele_EC_TCT_User,
!$Permission.DisableTriggersFlag,
AND(ISCHANGED(Status),
!ISPICKVAL(Status, &quot;Ready for MP&quot;),
!ISPICKVAL(Status, &quot;Patient Call Back&quot;)))</errorConditionFormula>
    <errorMessage>A TCT User may Not Update the Case Status to any status besides &quot;Patient Call Back&quot; or &quot;Ready for MP&quot;.</errorMessage>
</ValidationRule>