force-app/main/default/objects/Case/validationRules/VCC_Add_Appointment_Service.validationRule-meta.xml
<ValidationRule>
    <fullName>VCC_Add_Appointment_Service</fullName>
    <active>true</active>
    <description>If the Follow Up Appt Needed Field has a value, then Appointment Service needs to also contain a value.</description>
    <errorConditionFormula>OR( ISPICKVAL(VCC_Follow_Up_Appt_Needed__c , &quot;Within 8 hours&quot;), ISPICKVAL(VCC_Follow_Up_Appt_Needed__c, &quot;Within 24 hours&quot;),
        ISPICKVAL(VCC_Follow_Up_Appt_Needed__c, &quot;Within 3 days&quot;), ISPICKVAL(VCC_Follow_Up_Appt_Needed__c, &quot;Within 2 weeks&quot;)) &amp;&amp; ISPICKVAL(
        VCC_Appointment_Service__c , &quot;&quot;) &amp;&amp; !$Permission.DisableTriggersFlag &amp;&amp; !$Permission.VCC_Disable_Case_Validation_Rules &amp;&amp;
        RecordType.DeveloperName = &apos;VCC_Clinical_Triage&apos;</errorConditionFormula>
    <errorDisplayField>VCC_Appointment_Service__c</errorDisplayField>
    <errorMessage>ERROR: Select a value for Appointment Service.</errorMessage>
</ValidationRule>