force-app/main/default/objects/Case/validationRules/VCC_Cannot_Edit_Closed_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>VCC_Cannot_Edit_Closed_Case</fullName>
    <active>true</active>
    <description>Prevent the ability to edit a closed case.</description>
    <errorConditionFormula>AND(
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
  NOT($Permission.DisableTriggersFlag),
  NOT($Permission.VCC_Disable_Case_Validation_Rules),
  BEGINS(RecordType.DeveloperName, &quot;VCC_&quot;),
  RecordType.DeveloperName &lt;&gt; &quot;VCC_Administrative&quot;,
  NOT(ISNEW()),
  PRIORVALUE(IsClosed),

  /* Exceptions for Cases in Future Renewal Request business process */
  /* Pending Future Renewal Request: allow Pharm user to take over, create a new PN, or sign PN 
     from previously created FRR Tasks */
  NOT( AND(
    $Permission.VAHC_Access_Future_Renewal_Request,
    ISPICKVAL(Status, &apos;Pending Future Renewal Request&apos;),
    OR(
      ISCHANGED(VCC_Progress_Notes_Count__c),
      ISCHANGED(VCC_Electronic_Signature_Count__c),
      AND(ISCHANGED(OwnerId), OwnerId == $User.Id)
    )
  )),
  /* Allow Case to be automated to Closed - Resolved upon last FRR Task completion or last PN signed */
  NOT( AND(
    $Permission.VAHC_Access_Future_Renewal_Request,
    ISPICKVAL(PRIORVALUE(Status), &apos;Pending Future Renewal Request&apos;),
    ISPICKVAL(Status, &apos;Closed - Resolved&apos;)
  ))
)</errorConditionFormula>
    <errorMessage>ERROR: Unable to edit a closed case.</errorMessage>
</ValidationRule>