force-app/main/default/objects/Case/validationRules/VCC_Check_for_Other_Case_Outcome.validationRule-meta.xml
<ValidationRule>
    <fullName>VCC_Check_for_Other_Case_Outcome</fullName>
    <active>true</active>
    <description>CCCM-20314 Validation Rule for ADM/SCD Case: If Other Selected for Case Outcome</description>
    <errorConditionFormula>AND( !$Permission.DisableTriggersFlag, !$Permission.VCC_Disable_Case_Validation_Rules, RecordType.DeveloperName = &apos;VCC_Administrative&apos;,
        !ISBLANK(VCC_Other_Case_Outcome__c), !INCLUDES(VCC_Case_Outcome_Multi__c,&apos;Other&apos;) )</errorConditionFormula>
    <errorDisplayField>VCC_Other_Case_Outcome__c</errorDisplayField>
    <errorMessage>ERROR: &quot;Other&quot; must be selected for the Case Outcome to provide a description in Other Case Outcome.</errorMessage>
</ValidationRule>