force-app/main/default/objects/Case/validationRules/VCC_MedicationNameRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VCC_MedicationNameRequired</fullName>
    <active>true</active>
    <description>Medication Name is required if meds inquiry is selected or case sub type is Pharmacy Quality Assurance Issue</description>
    <errorConditionFormula>AND(
NOT($Permission.DisableTriggersFlag),
NOT($Permission.VCC_Disable_Case_Validation_Rules),
OR(
RecordType.DeveloperName = &quot;VCC_Vitrual_Clinic_Visit&quot;,
RecordType.DeveloperName = &quot;VCC_Pharmacy&quot;
)
)

&amp;&amp;
					
ISBLANK(VCC_Medication_Name__c)
&amp;&amp;
OR( 
!ISPICKVAL(VCC_Meds_Inquiry__c,&apos;&apos;),
 ISPICKVAL(VCC_Case_Sub_Type__c,&quot;Pharmacy Quality Assurance Issue&quot;)
)</errorConditionFormula>
    <errorDisplayField>VCC_Medication_Name__c</errorDisplayField>
    <errorMessage>ERROR: Medication Name is required when Pharmacy Quality Assurance Issue is selected.</errorMessage>
</ValidationRule>