force-app/main/default/objects/Case/validationRules/VCC_Prevent_Changing_Contact_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>VCC_Prevent_Changing_Contact_Name</fullName>
    <active>true</active>
    <description>As a VAHC user, I need to be prevented from changing the Record Type if there is an associated Progress Note.</description>
    <errorConditionFormula>BEGINS(RecordType.DeveloperName, &quot;VCC_&quot;) &amp;&amp; ISCHANGED(ContactId) &amp;&amp; !$Permission.VCC_Disable_Case_Validation_Rules &amp;&amp;
        !$Permission.DisableTriggersFlag</errorConditionFormula>
    <errorMessage>ERROR: Contact Name cannot be changed.</errorMessage>
</ValidationRule>