force-app/main/default/objects/Case/validationRules/VCC_Prevent_Closing_Cases.validationRule-meta.xml
<ValidationRule>
    <fullName>VCC_Prevent_Closing_Cases</fullName>
    <active>true</active>
    <description>Users cannot close a case if the following fields are not populated: Subject, Case Sub-Type, Case Reason, and Case Outcome</description>
    <errorConditionFormula>BEGINS( RecordType.DeveloperName, &quot;VCC_&quot;)
&amp;&amp;
!$Permission.DisableTriggersFlag
&amp;&amp;

(RecordType.DeveloperName &lt;&gt; &apos;VCC_Vitrual_Clinic_Visit&apos; &amp;&amp;
RecordType.DeveloperName &lt;&gt; &apos;VCC_Administrative&apos;) &amp;&amp;

ISCHANGED(Status) &amp;&amp;

OR(
ISPICKVAL(Status, &quot;Closed - Resolved&quot;),
ISPICKVAL(Status, &quot;Closed - Transferred&quot;))
&amp;&amp;

OR(
ISPICKVAL( VCC_Case_Sub_Type__c , &quot;&quot;),
IF(RecordType.DeveloperName = &apos;VCC_Pharmacy&apos;,
    OR( ISBLANK(VCC_Case_Outcome_Multi__c), ISBLANK(VCC_Case_Reason_Multi__c) ),
    IF(RecordType.DeveloperName = &apos;VCC_Clinical_Triage&apos;,
        OR( ISBLANK( Subject ), ISPICKVAL( VCC_Case_Outcome__c , &quot;&quot;), ISPICKVAL( VCC_Case_Reason__c , &quot;&quot;) ),
        FALSE /* Did not find a VCC_ Case */
    )
)
) 

&amp;&amp;
!$Permission.VCC_Disable_Case_Validation_Rules</errorConditionFormula>
    <errorMessage>ERROR: The following fields must be populated to close the Case: Subject, Case Sub-Type, Case Reason, and Case Outcome.</errorMessage>
</ValidationRule>