force-app/main/default/objects/Case/validationRules/VCC_Prevent_Closing_Cases_for_MSA.validationRule-meta.xml
<ValidationRule>
    <fullName>VCC_Prevent_Closing_Cases_for_MSA</fullName>
    <active>true</active>
    <description>If  &apos;Cannot Complete Scheduling Action&apos; is selected for Case Outcome, then must select Cannot Complete Scheduling Action Reason and Requested Service(s) to edit/close a case</description>
    <errorConditionFormula>!$Permission.DisableTriggersFlag

&amp;&amp;

RecordType.DeveloperName = &quot;VCC_Administrative&quot;

&amp;&amp;

INCLUDES(VCC_Case_Outcome_Multi__c, &apos;Cannot Complete Scheduling Action&apos;)

&amp;&amp;

(ISBLANK(VCC_Cannot_Comp_Scheduling_Action_Reason__c)
||
ISBLANK(VCC_Requested_Services_Multi__c))

&amp;&amp;

!$Permission.VCC_Disable_Case_Validation_Rules</errorConditionFormula>
    <errorMessage>If you chose &apos;Cannot Complete Scheduling Action&apos; for Case Outcome, then you must select &apos;Cannot Complete Scheduling Action Reason&apos; and &apos;Requested Service(s)&apos; to edit/close this case</errorMessage>
</ValidationRule>